# cocotte

./: .gitignore  CMakeLists.txt  README.md
include/cocotte/: datatypes.h  distance.h  learner.h  learner.hpp  modellist.h  modellist.hpp  useddimensions.h
include/cocotte/approximators/: approximator.h  form.h  forward.h  polynomial.h
include/cocotte/models/: leaf.h  leaf.hpp  model.h  modeldistance.h  modeliterator.h  modeliterator.hpp  models.hh  node.h  node.hpp
include/datasources/: dataloader.h  datasource.h
src/: CMakeLists.txt  cocotte.cpp  forward_comparator.cpp  main.cpp
src/cocotte/: CMakeLists.txt  distance.cpp  useddimensions.cpp
src/cocotte/approximators/: polynomial.cpp
src/cocotte/models/: leaf.cpp  node.cpp
src/datasources/: CMakeLists.txt  dataloader.cpp
