project("datasources")

file(GLOB_RECURSE ${PROJECT_NAME}_HEADER_H "../../include/${PROJECT_NAME}/*.h")
file(GLOB_RECURSE ${PROJECT_NAME}_HEADER_HH "../../include/${PROJECT_NAME}/*.hh")
file(GLOB_RECURSE ${PROJECT_NAME}_HEADER_HPP "../../include/${PROJECT_NAME}/*.hpp")
set(${PROJECT_NAME}_HEADER ${${PROJECT_NAME}_HEADER_H} ${${PROJECT_NAME}_HEADER_HH} ${${PROJECT_NAME}_HEADER_HPP})
file(GLOB_RECURSE ${PROJECT_NAME}_SOURCE "./*.cpp")

add_library(${PROJECT_NAME} ${${PROJECT_NAME}_HEADER} ${${PROJECT_NAME}_SOURCE})
